# knack-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  package.json  uninstall.ps1  uninstall.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  publish-types.yml  release.yml
crates/knack/: Cargo.toml
crates/knack-backend-github/: Cargo.toml
crates/knack-backend-github/src/: aggregate.rs  auth.rs  backend.rs  bootstrap.rs  external.rs  git.rs  lib.rs  runs.rs  workspace.rs
crates/knack-types/: Cargo.toml  README.md
crates/knack-types/src/: backend.rs  lib.rs  run.rs  skill.rs  tls.rs
crates/knack/embedded/: agent.txt  meta-skill.md
crates/knack/embedded/cli-docs/: agent-integration.md  auth.md  commands.md  exit-codes.md  getting-started.md  json-schema.md  linking.md  troubleshooting.md
crates/knack/src/: auth_store.rs  config.rs  docs.rs  errors.rs  http.rs  lib.rs  main.rs  output.rs  skill_pack.rs  skill_validators.rs  slug.rs  workspace.rs
crates/knack/src/api/: auth.rs  cloud.rs  mod.rs  overview.rs  runs.rs  skills.rs  teams.rs
crates/knack/src/commands/: auth.rs  create.rs  debug.rs  diff.rs  docs.rs  edit.rs  export.rs  feedback.rs  folder.rs  fork.rs  info.rs  info_chunks.rs  init.rs  interview.rs  introspect.rs  link.rs  list.rs  mark.rs  mod.rs  publish.rs  pull.rs  rate.rs  run.rs  search.rs  sync.rs  team.rs  uninstall.rs  upgrade.rs  validate.rs
crates/knack/src/commands/install/: block.rs  detect.rs  installed.rs  linked.rs  mod.rs  shim.rs  targets.rs
crates/knack/src/commands/runs/: diff.rs  list.rs  mod.rs  overview.rs  show.rs  stats.rs  trend.rs
crates/knack/tests/: auth.rs  link.rs  runs.rs  runs_aggregate.rs  skills.rs  smoke.rs
crates/knack/tests/common/: mod.rs
knack/: Cargo.toml
knack/src/: auth_store.rs  config.rs  docs.rs  errors.rs  lib.rs  main.rs  output.rs  skill_pack.rs  skill_validators.rs  update_check.rs  workspace.rs
knack/src/api/: artifacts.rs  auth.rs  feedback.rs  folders.rs  interview.rs  marketplace.rs  mod.rs  runs.rs  skills.rs  sse.rs  teams.rs  users.rs
knack/src/commands/: auth.rs  completions.rs  create.rs  debug.rs  diff.rs  docs.rs  edit.rs  feedback.rs  folder.rs  fork.rs  info.rs  init.rs  interview.rs  introspect.rs  list.rs  mark.rs  mod.rs  publish.rs  pull.rs  rate.rs  run.rs  search.rs  sync.rs  uninstall.rs  upgrade.rs  username.rs  validate.rs
knack/src/commands/install/: block.rs  detect.rs  installed.rs  meta_skill.md  mod.rs  shim.rs  snippet.md  targets.rs
knack/tests/: artifacts.rs  auth.rs  runs.rs  shim_e2e.rs  skills.rs
knack/tests/common/: mod.rs
skills/installer/: SKILL.md
skills/interview/: SKILL.md  artifacts.md  genesis.md  intuition.md  refine.md
