[workspace]
resolver = "2"
members = ["knack"]

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.80"
authors = ["Knack <hi@getknack.ai>"]
license = "MIT"
repository = "https://github.com/jordan-gibbs/knack"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
webbrowser = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console = "0.15"
indicatif = "0.17"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
similar = "2"
tempfile = "3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
bytes = "1"
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
flate2 = "1"
walkdir = "2"
wiremock = "0.6"
