[workspace]
resolver = "2"
members = [
    "crates/knack",
    "crates/knack-types",
    "crates/knack-backend-github",
]

[workspace.package]
version = "0.7.18"
edition = "2021"
rust-version = "1.80"
authors = ["Knack <hi@getknack.ai>"]
license = "MIT"
repository = "https://github.com/jordan-gibbs/knack-cli"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
tokio = { version = "1.42", features = ["full"] }
# `rustls-tls` keeps the bundled webpki roots (so bare containers with no
# system trust store still work); `rustls-tls-native-roots` ADDS the OS
# trust store on top, so corporate machines that inject a CA into the
# keychain (TLS-inspecting proxies like Netskope/Zscaler) are trusted by
# default — the same certs `curl`/`openssl` already accept. A custom CA
# bundle and an insecure escape hatch layer on via knack_types::tls.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
webbrowser = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console = "0.15"
indicatif = "0.17"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
similar = "2"
tempfile = "3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
bytes = "1"
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
flate2 = "1"
walkdir = "2"
wiremock = "0.6"
async-trait = "0.1"
include_dir = "0.7"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
