[package]
name = "knack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Knack CLI — agent-friendly skill operations"

[[bin]]
name = "knack"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
keyring.workspace = true
webbrowser.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
console.workspace = true
indicatif.workspace = true
dirs.workspace = true
