[package]
name = "knack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Knack CLI — agent-friendly skill operations"

[[bin]]
name = "knack"
path = "src/main.rs"

[lib]
name = "knack_cli"
path = "src/lib.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
keyring.workspace = true
webbrowser.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
console.workspace = true
indicatif.workspace = true
dirs.workspace = true
chrono.workspace = true
similar.workspace = true
tempfile.workspace = true
futures-util.workspace = true
bytes.workspace = true
sha2.workspace = true
hex.workspace = true
tar.workspace = true
flate2.workspace = true
walkdir.workspace = true

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true }
